--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>markovian</groupId>
+  <groupId>markovian.lambda</groupId>
   <artifactId>lambda</artifactId>
   <packaging>jar</packaging>
   <version>0.1.0</version>
@@ -43,14 +43,8 @@
     </dependency>
     <dependency>
       <groupId>rubygems</groupId>
-      <artifactId>http</artifactId>
-      <version>0.9.6</version>
-      <type>gem</type>
-    </dependency>
-    <dependency>
-      <groupId>rubygems</groupId>
       <artifactId>twitter</artifactId>
-      <version>5.15.0</version>
+      <version>5.14.0</version>
       <type>gem</type>
     </dependency>
   </dependencies>
@@ -60,9 +54,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.4.1</version>
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
+          <artifactSet>
+            <excludes>
+              <exclude>*:*:gem:*</exclude>
+            </excludes>
+          </artifactSet>
         </configuration>
         <executions>
           <execution>
@@ -72,6 +71,7 @@
             </goals>
           </execution>
         </executions>
+        <extensions>true</extensions>
       </plugin>
       <plugin>
         <groupId>de.saumya.mojo</groupId>
